--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
 GATSBY_MEDUSA_BACKEND_URL=http://localhost:9000
 GATSBY_STRIPE_KEY=pk_test_something
+WPGRAPHQL_URL=https://wpgatsbydemo.wpengine.com/graphql
