add netlify support

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "gatsby": "^4.0.2",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.3.0",
+    "gatsby-plugin-netlify": "^5.0.1",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.1",
     "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-source-wordpress": "^6.0.0",
     "gatsby-source-medusa": "^0.0.41",
+    "gatsby-source-wordpress": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.21",
